Extraigo calculations y transferencia exitosa
